# SQL-AI-ASSISTANT

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/agent/: graph.py  nodes.py  prompts.py  state.py
app/api/: main.py  routes.py
app/services/: query_service.py
app/tools/: mcp_client.py
mcp-server/: main.py  pyproject.toml
