[project]
name = "sql-ai-assiatant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary]>=3.3.3",
    "uvicorn>=0.43.0",
]

[tool.uv.workspace]
members = [
    "mcp-server",
]
